--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div class="gameboard-container">
+      <div class="game-status"></div>
       <div class="gameboard">
         <div class="cell" data-index="0"></div>
         <div class="cell" data-index="1"></div>
