--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div class="start-screen">
+      <div class="start-content">
+        <div class="screen-title">Tic-Tac-Toe</div>
+        <div class="player-names">
+          <input
+            class="player-name"
+            type="text"
+            name="player1"
+            id="player1"
+            placeholder="Player 1"
+          />
+          <img class="versus" src="./vs.png" alt="versus image" />
+          <input
+            class="player-name"
+            type="text"
+            name="player2"
+            id="player2"
+            placeholder="Player 2"
+          />
+        </div>
+        <div class="game-mode">
+          <button>Human</button>
+          <button>Computer</button>
+        </div>
+        <button class="start-btn">Start Game</button>
+      </div>
+    </div>
     <div class="gameboard-container">
       <div class="game-status"></div>
       <div class="gameboard">
