Add spash screen styles

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           />
         </div>
         <div class="game-mode">
-          <button>Human</button>
-          <button>Computer</button>
+          <button class="human-btn btn">Human</button>
+          <button class="computer-btn btn">Computer</button>
         </div>
-        <button class="start-btn">Start Game</button>
+        <button class="start-btn btn">Start Game</button>
       </div>
     </div>
     <div class="gameboard-container">
