Add restart and go back buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             id="player1"
             placeholder="Player 1"
           />
-          <img class="versus" src="./vs.png" alt="versus image" />
+          <div class="versus"><img class="versus-img" src="./vs.png" alt="versus image" /></div>
           <input
             class="player-name"
             type="text"
@@ -49,6 +49,10 @@
         <div class="cell" data-index="6"></div>
         <div class="cell" data-index="7"></div>
         <div class="cell" data-index="8"></div>
+      </div>
+      <div class="options">
+        <button class="options-btn btn">Restart</button>
+        <button class="options-btn btn">Go back</button>
       </div>
     </div>
   </body>
