--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
     <link rel="stylesheet" href="sanitize.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
@@ -21,7 +25,9 @@
             id="player1"
             placeholder="Player 1"
           />
-          <div class="versus"><img class="versus-img" src="./vs.png" alt="versus image" /></div>
+          <div class="versus">
+            <img class="versus-img" src="./images/vs.png" alt="versus image" />
+          </div>
           <input
             class="player-name"
             type="text"
