--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             placeholder="Player 2"
           />
         </div>
-        <div class="game-mode">
+        <!-- <div class="game-mode">
           <button class="human-btn btn">Human</button>
           <button class="computer-btn btn">Computer</button>
-        </div>
+        </div> -->
         <button class="start-btn btn">Start Game</button>
       </div>
     </div>
@@ -57,8 +57,8 @@
         <div class="cell" data-index="8"></div>
       </div>
       <div class="options">
-        <button class="options-btn btn">Restart</button>
-        <button class="options-btn btn">Go back</button>
+        <button class="restart-btn btn">Restart</button>
+        <button class="go-back-btn btn">Go back</button>
       </div>
     </div>
   </body>
